<resources>
    <string name="app_name">DIBS</string>
    <string name="members">Members</string>
    <string name="calendar">Calendar</string>
    <string name="bounties">Bounties</string>
    <string name="points">Points</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name_email">Name/Email</string>
    <string name="family_name">Panda Family</string>
    <string name="title_activity_bounties">Bounties</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>


</resources>
