<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/family_name"
        android:layout_width="249dp"
        android:layout_height="91dp"
        android:background="#199ECF"
        android:text="@string/family_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <Button
        android:id="@+id/goToMembers"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="24dp"
        android:text="@string/members"
        android:onClick="launchMembers"
        app:layout_constraintBottom_toTopOf="@+id/goToPoints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/family_name"
        app:layout_constraintVertical_bias="0.613" />

    <Button
        android:id="@+id/gotoBounties"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/bounties"
        android:onClick="launchBounties"
        app:layout_constraintBottom_toTopOf="@+id/goToCalendar"
        app:layout_constraintEnd_toStartOf="@+id/goToMembers"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/family_name"
        app:layout_constraintVertical_bias="0.614" />

    <Button
        android:id="@+id/goToPoints"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:text="@string/points"
        android:onClick="launchPoints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <Button
        android:id="@+id/goToCalendar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="80dp"
        android:onClick="launchCalendar"
        android:text="@string/calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/goToPoints"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>